style: Add bootstrap CDN and custom styles

--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,1 +1,6 @@
-<h1>About!</h1>
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">About</h5>
+    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates harum repellat accusantium tenetur. Deserunt rerum odit corporis aut, perspiciatis libero in magni cum quis dolorum suscipit possimus nobis optio numquam. Sint nobis eos voluptate quod amet facere aliquid, commodi minus!</p>
+  </div>
+</div>
