--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,1 +1,9 @@
-<h1>Hello from HandleBars!</h1>
+<div class="h-100 p-5 mt-4 bg-light border rounded-3">
+  <h2 class="display-4">Notes App Nodejs and Mongodb</h2>
+  <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+  <hr class="my-4">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita adipisci ipsum molestiae reprehenderit voluptate animi doloribus iusto repellendus reiciendis est, repellat deleniti laudantium quisquam, quos soluta mollitia. Consequuntur, corrupti illo!</p>
+  <a class="btn btn-primary btn-lg" href="#" type="button">
+    Example button
+  </a>
+</div>
