--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,12 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notes App</title>
+  <!-- BOOTSTRAP 4 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <!-- CUSTOM CSS -->
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 
   <p>Navigation</p>
 
-  {{{ body }}}
+  <main class="container">
+    {{{ body }}}
+  </main>
 
   <p>Footer</p>
   
