--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -1,10 +1,21 @@
+{{#each errors}}
+  <div href="#" class="alert alert-danger rounded-5">
+    <div class="d-flex gap-2 w-100 justify-content-between">
+      <div>
+        <h6 class="mb-0">{{text}}</h6>
+      </div>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  </div>
+{{/each}}
+
 <div class="col-md-5 mx-auto">
   <div class="modal-content rounded-5" style="border: none;">
     <div class="ps-5 py-4 border-bottom-0">
       <h2 class="fw-bold mb-0">New Note</h2>
     </div>
     <div class="modal-body p-5 pt-0">
-      <form action="/">
+      <form action="/notes/new-note" method="POST">
         <div class="form-floating mb-3">
           <input type="text" name="title" class="form-control rounded-4" id="title" autofocus>
           <label for="title">Title</label>
