style: Add last updated timestamps to the notes timeago

--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -9,7 +9,7 @@
           <li class="me-auto">
           </li>
           <li class="d-flex align-items-center">
-            <small class="text-muted">{{createdAt}}</small>
+            <small class="text-muted">{{timeago}}</small>
           </li>
         </ul>
       </div>
