--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -10,7 +10,11 @@ body {
 }
 
 .rounded-5 {
-  border-radius: 1em;
+  border-radius: 1rem;
+}
+
+.rounded-4 {
+  border-radius: 0.5rem;
 }
 
 .crop-title, .crop {
@@ -21,6 +25,7 @@ body {
 
 .crop-title {
   -webkit-line-clamp: 2;
+  line-height: 3rem;
 }
 
 .crop {
