--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -1,18 +1,20 @@
+<div class="col-md-6 mx-auto">
 {{#each errors}}
-  <div href="#" class="alert alert-danger rounded-5">
+  <div href="#" class="alert alert-danger rounded-4">
     <div class="d-flex gap-2 w-100 justify-content-between">
       <div>
-        <h6 class="mb-0">{{text}}</h6>
+        <h5 class="fw-bold mb-0">{{text}}</h5>
       </div>
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
   </div>
 {{/each}}
+</div>
 
 <div class="col-md-5 mx-auto">
   <div class="modal-content rounded-5" style="border: none;">
     <div class="ps-5 py-4 border-bottom-0">
-      <h2 class="fw-bold mb-0">New Note</h2>
+      <h2 class="display-6 fw-bold crop-title">New Note</h2>
     </div>
     <div class="modal-body p-5 pt-0">
       <form action="/notes/new-note" method="POST">
