--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,12 +1,15 @@
-body {
-  background: #373B44;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #4286f4, #373B44);
-  background: linear-gradient(to right, #4286f4, #373B44);
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .row>* {
   margin-top: 0;
   margin-bottom: 1rem;
+}
+
+.rounded-5, .rounded-4 {
+  border: 1px solid #d3d5d8;
 }
 
 .rounded-5 {
@@ -28,11 +31,9 @@ body {
   line-height: 3rem;
 }
 
-.crop {
-  -webkit-line-clamp: 2;
-}
+
 
 .card:hover {
-  transform: scale(1.025);
-  box-shadow: 0 10px 20px 0 rgb(60 64 67 / 30%), 0 20px 60px 20px rgb(60 64 67 / 15%)
+  transform: scale(1.03);
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
 }
