style: Fix all-notes and new-note views

--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -1,4 +1,4 @@
-<div class="col-md-6 mx-auto">
+<div class="col-md-6 mx-auto py-3">
 {{#each errors}}
   <div href="#" class="alert alert-danger rounded-4">
     <div class="d-flex gap-2 w-100 justify-content-between">
