--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,6 +1,6 @@
-a {
+a, .nav-link {
   text-decoration: none;
-  color: inherit;
+  color: black;
 }
 
 .row>* {
@@ -10,6 +10,14 @@ a {
 
 .rounded-5, .rounded-4 {
   border: 1px solid #d3d5d8;
+}
+
+.border-bottom {
+  border-bottom: 1px solid #d3d5d8 !important;
+}
+
+.border-top {
+  border-top: 1px solid #d3d5d8 !important;
 }
 
 .rounded-5 {
@@ -31,9 +39,11 @@ a {
   line-height: 3rem;
 }
 
+.col {
+  padding: 12px;
+}
 
-
-.card:hover {
+.a:hover, .card:hover {
   transform: scale(1.03);
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
 }
