--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -1,6 +1,6 @@
-<div class="row row-cols-lg-3 g-4 py-5">
+<div class="row row-cols-lg-3 g-4 py-4 m-0">
   {{#each notes}}
-  <div class="col">
+  <div class="col mb-0">
     <div class="card card-cover h-90 rounded-5">
       <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
         <h4 class="pt-2 mt-2 mb-4 display-6 fw-bold crop-title">{{title}}</h4>
@@ -19,10 +19,10 @@
 </div>
 
 {{#unless notes}}
-<div class="col-md-6 mx-auto">
+<div class="col-md-6 mx-auto text-center">
   <div class="rounded-4">
-    <a href="/notes/add" class="list-group-item card list-group-item-action d-flex gap-3 py-3" aria-current="true">
-      <div class="d-flex gap-2 w-100 justify-content-between">
+    <a href="/notes/add" class="list-group-item card list-group-item-action py-3" aria-current="true">
+      <div class="w-100 justify-content-between">
         <div class="p-2">
           <h4 class="display-6 fw-bold crop-title">There are not Notes yet</h4>
           <p style="font-size: 1.25rem;">Click me to create one!</p>
