style: Fix styles for all-notes and new-note views

--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -4,7 +4,7 @@
     <a href="/notes/edit/{{_id}}" class="card card-cover h-90 rounded-5">
       <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
         <h4 class="pt-2 mt-2 mb-4 display-6 fw-bold crop-title">{{title}}</h4>
-        <p class="crop">{{description}}</p>
+        <p class="crop fs-5">{{description}}</p>
         <ul class="d-flex list-unstyled mt-auto">
           <li class="me-auto">
           </li>
