feat: Add index and about view

--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,6 +1,8 @@
-<div class="card">
-  <div class="card-body">
-    <h5 class="card-title">About</h5>
-    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates harum repellat accusantium tenetur. Deserunt rerum odit corporis aut, perspiciatis libero in magni cum quis dolorum suscipit possimus nobis optio numquam. Sint nobis eos voluptate quod amet facere aliquid, commodi minus!</p>
+<div class="container p-4 my-1">
+  <div class="py-5 my-3">
+    <div class="py-4">
+      <h4 class="pt-2 mt-2 mb-4 display-6 fw-bold crop-title">About</h4>
+      <p class="fs-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero quibusdam excepturi ea ipsa dicta a laudantium obcaecati quisquam maxime beatae illo dignissimos ut, laboriosam inventore dolore iure similique eveniet provident autem tempora doloribus, ipsum id? Facere unde quis culpa praesentium id odio earum aut, quaerat, labore mollitia quod ratione impedit consequuntur fugit repudiandae eos natus voluptatem esse officia ex in, modi deleniti. Placeat aspernatur veniam impedit amet laboriosam velit accusamus neque, omnis, sed, consequuntur at sint sapiente enim nesciunt veritatis iure delectus perspiciatis? Iure dolor repellendus rerum neque blanditiis beatae distinctio magni, fugiat eligendi ducimus laboriosam dolorum, maxime alias. Numquam.</p>
+    </div>
   </div>
 </div>
