--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,9 +1,12 @@
-<div class="h-100 p-5 mt-4 bg-light border rounded-3">
-  <h2 class="display-4">Notes App Nodejs and Mongodb</h2>
-  <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-  <hr class="my-4">
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita adipisci ipsum molestiae reprehenderit voluptate animi doloribus iusto repellendus reiciendis est, repellat deleniti laudantium quisquam, quos soluta mollitia. Consequuntur, corrupti illo!</p>
-  <a class="btn btn-primary btn-lg" href="#" type="button">
-    Example button
-  </a>
+
+<div class="container p-3 my-2">
+  <div class="row flex-lg-row-reverse align-items-center g-5 py-5 my-2">
+    <div class="col-10 col-sm-8 col-lg-6">
+      <img src="https://lorempixel.com/g/700/500/" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"height="500" loading="lazy">
+    </div>
+    <div class="col-lg-6">
+      <h4 class="pt-2 mt-2 mb-4 display-6 fw-bold crop-title">Notes App</h4>
+      <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dolor rem eos quae impedit quia consequuntur facere, error fugiat beatae, numquam ipsum eaque et. Quod ipsum alias fugiat? Explicabo, dolorem.</p>
+    </div>
+  </div>
 </div>
