--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -47,3 +47,14 @@ a, .nav-link {
   transform: scale(1.03);
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
 }
+
+.vertical-center {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.border-right {
+  border-right: 1.5px solid #d3d5d8 !important;
+}
