syle: Fix styles to always cover the full portview

--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,4 +1,4 @@
-<div class="container p-4 my-1">
+<div class="container p-4">
   <div class="py-5 my-3">
     <div class="py-4">
       <h4 class="pt-2 mt-2 mb-4 display-6 fw-bold crop-title">About</h4>
