--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -14,7 +14,7 @@
 
   {{> navigation}}
 
-  <main class="container">
+  <main class="container" style="min-height: 82.5vh;">
     {{{ body }}}
   </main>
 
