--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,4 @@
-
-<div class="container p-3 my-2">
+<div class="container p-3">
   <div class="row flex-lg-row-reverse align-items-center g-5 py-5 my-2">
     <div class="col-10 col-sm-8 col-lg-6">
       <img src="https://lorempixel.com/g/700/500/" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"height="500" loading="lazy">
