--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -14,7 +14,7 @@
 
   {{> navigation}}
 
-  <main class="container" style="min-height: 82.5vh;">
+  <main class="container d-flex flex-column justify-content-start" style="min-height: 82.5vh;">
     {{> messages}}
     {{{ body }}}
   </main>
