--- a/src/views/partials/messages.hbs
+++ b/src/views/partials/messages.hbs
@@ -1,10 +1,12 @@
 {{#if success_msg}}
-<div href="#" class="col alert alert-success rounded-4 m-3 mb-0">
-  <div class="d-flex justify-content-between">
-    <div>
-      <small class="fw-bold mb-0">{{success_msg}}</small>
+<div class="w-100 px-3">
+  <div class="alert alert-success rounded-4" style="margin: 0.75rem 0 0 0;">
+    <div class="d-flex justify-content-between">
+      <div>
+        <small class="fw-bold mb-0">{{success_msg}}</small>
+      </div>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 </div>
 {{/if}}
