--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -7,8 +7,8 @@
       <li class="nav-item"><a href="/about" class="nav-link px-2">About</a></li>
     </ul>
     <ul class="nav">
-      <li class="nav-item"><a href="#" class="nav-link mx-2 px-3">Login</a></li>
-      <li class="nav-item"><a href="#" class="nav-link mx-2 px-3 btn btn-primary text-light">Sign up</a></li>
+      <li class="nav-item"><a href="/users/signin" class="nav-link mx-2 px-3">Sign in</a></li>
+      <li class="nav-item"><a href="/users/signup" class="nav-link mx-2 px-3 btn btn-primary text-light">Sign up</a></li>
     </ul>
   </div>
 </nav>
