--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -1,33 +1,37 @@
 <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 82.5vh;">
-  <div class="row justify-content-center my-1 w-100">
-    <div class="col-md-6 px-5 mb-0">
-      <div class="modal-content rounded-5">
-        <div class="ps-4 py-4 border-bottom-0">
-          <h2 class="display-6 fw-bold m-0 crop-title">Sign Up</h2>
-        </div>
-        <div class="modal-body px-4 pt-0">
-          <form action="/notes/new-note" method="POST">
-            <div class="form-floating mb-3">
-              <input type="name" name="name" class="form-control rounded-4" id="name" placeholder=" ">
-              <label for="name">Name</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input type="email" name="email" class="form-control rounded-4" id="email" placeholder=" ">
-              <label for="email">Email address</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input type="password" name="password" class="form-control rounded-4" id="password" placeholder=" ">
-              <label for="password">Password</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input type="password" name="confirm_password" class="form-control rounded-4" id="confirm_password" placeholder=" ">
-              <label for="confirm_password">Confirm password</label>
-            </div>
-            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Sign up</button>
-            <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
-          </form>
+  <div class="w-100">
+    <div class="row justify-content-center">
+      <div class="col-md-3"></div>
+      <div class="col-md-6 px-5 mb-0">
+        <div class="modal-content rounded-5">
+          <div class="ps-4 py-4 border-bottom-0">
+            <h2 class="display-6 fw-bold m-0 crop-title">Sign Up</h2>
+          </div>
+          <div class="modal-body px-4 pt-0">
+            <form action="/users/signup" method="POST">
+              <div class="form-floating mb-3">
+                <input type="name" name="name" class="form-control rounded-4" id="name" placeholder=" " value="{{name}}">
+                <label for="name">Name</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input type="email" name="email" class="form-control rounded-4" id="email" placeholder=" " value="{{email}}">
+                <label for="email">Email address</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input type="password" name="password" class="form-control rounded-4" id="password" placeholder=" " value="{{password}}">
+                <label for="password">Password</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input type="password" name="confirm_password" class="form-control rounded-4" id="confirm_password" placeholder=" " value="{{confirm_password}}">
+                <label for="confirm_password">Confirm password</label>
+              </div>
+              <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Sign up</button>
+              <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+            </form>
+          </div>
         </div>
       </div>
+      {{> errors}}
     </div>
   </div>
 </div>
