feat: Add user signup

--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -31,7 +31,9 @@
           </div>
         </div>
       </div>
-      {{> errors}}
+      <div class="col-md-3 px-0">
+        {{> errors}}
+      </div>
     </div>
   </div>
 </div>
