--- a/src/views/partials/errors.hbs
+++ b/src/views/partials/errors.hbs
@@ -1,12 +1,20 @@
-<div class="col-md-3 px-0">
-  {{#each errors}}
-  <div href="#" class="alert alert-danger rounded-4">
-    <div class="d-flex justify-content-between">
-      <div>
-        <small class="fw-bold mb-0">{{text}}</small>
-      </div>
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+{{#each errors}}
+<div href="#" class="alert alert-danger rounded-4">
+  <div class="d-flex justify-content-between">
+    <div>
+      <small class="fw-bold mb-0">{{text}}</small>
     </div>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
-  {{/each}}
 </div>
+{{/each}}
+{{#if error_msg}}
+<div href="#" class="alert alert-danger rounded-4">
+  <div class="d-flex justify-content-between">
+    <div>
+      <small class="fw-bold mb-0">{{error_msg}}</small>
+    </div>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+</div>
+{{/if}}
