--- a/src/views/partials/messages.hbs
+++ b/src/views/partials/messages.hbs
@@ -1,6 +1,6 @@
 {{#if success_msg}}
-<div class="w-100 px-3">
-  <div class="alert alert-success rounded-4" style="margin: 0.75rem 0 0 0;">
+<div class="w-100 mt-1">
+  <div class="alert alert-success rounded-4 m-0">
     <div class="d-flex justify-content-between">
       <div>
         <small class="fw-bold mb-0">{{success_msg}}</small>
