fix: Add proper error message layout

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -14,8 +14,7 @@
 
   {{> navigation}}
 
-  <main class="container d-flex flex-column justify-content-start" style="min-height: 82.5vh;">
-    {{> messages}}
+  <main class="container d-flex flex-column justify-content-center" style="min-height: 82.5vh;">
     {{{ body }}}
   </main>
 
