--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -30,7 +30,9 @@
           </div>
         </div>
       </div>
-      {{> errors}}
+      <div class="col-md-3 px-0">
+        {{> errors}}
+      </div>
     </div>
   </div>
 </div>
