--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -1,37 +1,44 @@
 <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 82.5vh;">
-  <div class="row justify-content-center my-1 w-100">
-    <div class="col-md-6 px-5 mb-0">
-      <div class="modal-content rounded-5">
-        <div class="ps-4 py-4 border-bottom-0">
-          <h2 class="display-6 fw-bold m-0 crop-title">Sign In</h2>
-        </div>
-        <div class="modal-body px-4 pt-0">
-          <form action="/notes/new-note" method="POST">
-            <div class="form-floating mb-3">
-              <input type="email" name="email" class="form-control rounded-4" id="email" placeholder=" ">
-              <label for="email">Email address</label>
+  <div class="w-100">
+    <div class="row justify-content-center">
+      <div class="col-md-3"></div>
+        <div class="col-md-6 px-5 mb-0">
+          <div class="row justify-content-center my-3 w-100">
+              <div class="modal-content rounded-5">
+                <div class="ps-4 py-4 border-bottom-0">
+                  <h2 class="display-6 fw-bold m-0 crop-title">Sign In</h2>
+                </div>
+                <div class="modal-body px-4 pt-0">
+                  <form action="/notes/new-note" method="POST">
+                    <div class="form-floating mb-3">
+                      <input type="email" name="email" class="form-control rounded-4" id="email" placeholder=" ">
+                      <label for="email">Email address</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                      <input type="password" name="password" class="form-control rounded-4" id="password" placeholder=" ">
+                      <label for="password">Password</label>
+                    </div>
+                    <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Sign In</button>
+                  </form>
+                </div>
+              </div>
+          </div>
+        <div class="row justify-content-center my-3 w-100">
+            <div class="modal-content rounded-5 px-2">
+              <div class="w-100 justify-content-between">
+                <div class="p-3 text-center">
+                  <small class="my-0">
+                    New to Notes App?
+                    <a href="/signup?source=login" class="text-primary small-a">Create an account</a>.
+                  </small>
+                </div>
+              </div>
             </div>
-            <div class="form-floating mb-3">
-              <input type="password" name="password" class="form-control rounded-4" id="password" placeholder=" ">
-              <label for="password">Password</label>
-            </div>
-            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Sign In</button>
-          </form>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="row justify-content-center my-1 w-100">
-    <div class="col-md-5 mt-2 mb-0 px-0">
-      <div class="modal-content rounded-5 px-2">
-        <div class="w-100 justify-content-between">
-          <div class="p-3 text-center">
-            <small class="my-0">
-              New to Notes App? 
-              <a href="/signup?source=login" class="text-primary small-a">Create an account</a>.
-            </small>
-          </div>
-        </div>
+      <div class="col-md-3 py-3 px-0">
+        {{>messages}}
+        {{>errors}}
       </div>
     </div>
   </div>
