--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -9,7 +9,7 @@
                   <h2 class="display-6 fw-bold m-0 crop-title">Sign In</h2>
                 </div>
                 <div class="modal-body px-4 pt-0">
-                  <form action="/notes/new-note" method="POST">
+                  <form action="/users/signin" method="POST">
                     <div class="form-floating mb-3">
                       <input type="email" name="email" class="form-control rounded-4" id="email" placeholder=" ">
                       <label for="email">Email address</label>
