feat: Change views when user is logged in and logged out

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -91,3 +91,7 @@ a, .nav-link {
 .small-a:hover {
   text-decoration: underline;
 }
+
+.nav-link.btn-outline-primary:hover {
+  color: white !important;
+}
