--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -10,4 +10,6 @@
   </div>
 </div>
 
-<a href="/notes/add" class="floating-button display-6">+</a>
+{{#if user}}
+  <a href="/notes/add" class="floating-button display-6">+</a>
+{{/if}}
