--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -24,8 +24,8 @@
     <a href="/notes/add" class="card card-cover w-100 rounded-5 py-3 " aria-current="true">
       <div class="w-100 justify-content-between">
         <div class="p-2">
-          <h4 class="display-6 fw-bold crop-title">There are not Notes yet</h4>
-          <p style="font-size: 1.25rem;">Click me to create one!</p>
+          <h4 class="display-6 fw-bold crop-title">Hello {{user.name}}! 👋</h4>
+          <p class="my-3" style="font-size: 1.25rem;">There are not Notes yet. <small class="text-muted">Click me to create one!</small></p>
         </div>
       </div>
     </a>
