--- a/src/views/partials/errors.hbs
+++ b/src/views/partials/errors.hbs
@@ -18,3 +18,13 @@
   </div>
 </div>
 {{/if}}
+{{#if error}}
+<div href="#" class="alert alert-danger rounded-4">
+  <div class="d-flex justify-content-between">
+    <div>
+      <small class="fw-bold mb-0">{{error}}</small>
+    </div>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+</div>
+{{/if}}
