style: Add notes-app preview image on index.hbs

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="container p-3">
   <div class="row flex-lg-row-reverse align-items-center g-5 py-4 my-2">
     <div class="col-10 col-sm-8 col-lg-6">
-      <img src="https://lorempixel.com/g/700/500/" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"height="500" loading="lazy">
+      <img src="/img/notes-app.png" class="d-block" width="600" height="368" alt="Notes App preview" loading="lazy">
     </div>
     <div class="col-lg-6">
       <h4 class="pt-2 mt-2 mb-4 display-6 fw-bold crop-title">Notes App</h4>
