fix: Change a tag href to /users/signup

--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -29,7 +29,7 @@
                 <div class="p-3 text-center">
                   <small class="my-0">
                     New to Notes App?
-                    <a href="/signup?source=login" class="text-primary small-a">Create an account</a>.
+                    <a href="/users/signup" class="text-primary small-a">Create an account</a>.
                   </small>
                 </div>
               </div>
